
AntBuilder:
----------------------
* Added optional anthome attribute. Can be used in lieu of antscript to make config.xml more portable across environments and more intuitive (than antscript) for new CruiseControl users. Thanks to Paul Hammant for the idea.

AntPublisher:
----------------------
* Will now pass the property "thisbuildsuccessful" to the ant script.

controlpanel.jsp:
----------------------
* Provide direct link to project jmx page (CC-204). Patch by Tim Shadel

contrib:
----------------------
* Add support for distributed building (CC-137). Submitted by Jeff Ramsdale, Patches by Dan Rollo
* Add RpmPackager for creating CruiseControl RPM (CC-154). Submitted by Julian Simpson.

CMSynergy:
----------------------
* Added options reconfigure, ignoreWorkarea, language, and country attributes (CC-179). Patch by Robert J. Smith

cruisecontrol.sh:
----------------------
* Execute java from JAVA_HOME. Patch by Martin Jaeger.

CVS:
----------------------
* Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken
* Updated documentation and class comments to correctly reflect the required attributes after the module change (CC-207). Patch by Mark Doliner
* No longer using environment variable CVS_ROOT. Validation now requires one to either set localworkingcopy or cvsroot and module (CC-207). Patch by Mark Doliner

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

documentation:
----------------------
* Spelling corrections. Patch by Larry Shatzer.

EmailPublisher:
----------------------
* Now accepts <alert> elements to notify users of modifications in files matching a regexp (CC-120). Patch by Eric Spiegelberg

FTPPublisher:
----------------------